# CppCfg

./: .gitignore  CMakeLists.txt  clearBuild.sh  readme.md  readme.txt  task.txt
com/: SimpleCfg.cpp  SimpleCfg.h
export_cpp/: CMakeLists.txt  ExportCpp.cpp  ExportCpp.h  SimpleCfg.cpp  SimpleCfg.h  any.h  doc.js  log.cpp  log.h  main.cpp  stdafx.h
sample/: CC_test_cfg.h  CMakeLists.txt  MyCfg.txt  build_cpp.sh  clearBuild.sh  main.cpp  reame.txt  stdafx.h  test.cpp  test_cfg.h
test/: CMakeLists.txt  main.cpp  stdafx.h  test_build_cpp.cpp  test_json.cpp  test_parse_cfg.cpp
vs/: lib.lua  premake5.lua  readme.txt
